--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,47 @@
-<div>Chat Rooms index</div>
+<h2 class="ui center aligned icon header">
+  <i class="circular orange coffee icon"></i>
+  Say Something
+</h2>
+
+<div class="ui two column grid">
+  
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui feed">
+          <%= render @messages %>
+        </div>
+      </div>
+      <div class="extra content">
+        
+        <form class="ui reply form">
+          <div class="field">
+            <div class="ui fuild icon input">
+              <input type="text" placeholder="Enter a message...">
+              <i class="bordered inverted orange edit icon"></i>
+            </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui inverted vertical pointing menu">
+          <a class="active item">
+            Home
+          </a>
+          <a class="item">
+            Messages
+          </a>
+          <a class="item">
+            Friends
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
