--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/messages'%>
     <div class="ui container">
       <%= yield %>
     </div>
