--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,21 +7,22 @@
   
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
-        <div class="ui feed">
+      <div class="content scroll">
+        <div class="ui feed" id="message-container">
           <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
         
-        <form class="ui reply form">
+        <%= form_for(@message, url: message_path, html: {class: 'ui reply form'}, role: 'form', remote: true) do |f|%>
           <div class="field">
             <div class="ui fuild icon input">
-              <input type="text" placeholder="Enter a message...">
-              <i class="bordered inverted orange edit icon"></i>
+              
+                <%= f.text_field :body, placeholder:'Enter a message...'%>
+                <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
             </div>
           </div>
-        </form>
+        <% end %>
 
       </div>
     </div>
