Last order and js

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,15 @@
 
 .chatbox {
   height: 450px;
-  .scroll{
-    overflow: scroll;
+}
+
+#messages{
+  height: 15em;
+  overflow: auto;
+}
+
+.input{
+  button {
+    display: none;
   }
 }
